# Yieldplex

./: .env.example  .gitattributes  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  SUBMISSION_EVIDENCE.md  Surfpool.toml  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
crates/ya-interface/src/: error.rs  lib.rs
deploy/: devnet.json
docs/: BUILD_YOUR_OWN_ADAPTER.md  SPEC.md
docs/adapters/: drift-if.md  jupiter-jlp.md  kamino.md  maple.md  marginfi.md
idls/: CPI-META.md  drift.json  jupiter_perps.json  kamino_lend.json  marginfi.json  syrup_swap_pool.json
programs/ya-adapter-drift-if/: Cargo.toml  security-checklist.md
programs/ya-adapter-drift-if/src/: lib.rs
programs/ya-adapter-jupiter-jlp/: Cargo.toml  security-checklist.md
programs/ya-adapter-jupiter-jlp/src/: lib.rs
programs/ya-adapter-kamino/: Cargo.toml  security-checklist.md
programs/ya-adapter-kamino/src/: lib.rs
programs/ya-adapter-maple/: Cargo.toml  security-checklist.md
programs/ya-adapter-maple/src/: lib.rs
programs/ya-adapter-marginfi/: Cargo.toml  security-checklist.md
programs/ya-adapter-marginfi/src/: lib.rs
programs/ya-cooldown-standin/: Cargo.toml
programs/ya-cooldown-standin/src/: lib.rs
programs/ya-cpi-spike/: Cargo.toml
programs/ya-cpi-spike/src/: lib.rs
programs/ya-dispatcher/: Cargo.toml  security-checklist.md
programs/ya-dispatcher/src/: lib.rs
programs/ya-dispatcher/tests/: dispatcher_tests.rs
programs/ya-interface/: Cargo.toml
programs/ya-interface/src/: constants.rs  cpi.rs  events.rs  lib.rs  state.rs  view.rs
programs/ya-mock-adapter/: Cargo.toml
programs/ya-mock-adapter/src/: lib.rs
programs/ya-registry/: Cargo.toml  security-checklist.md
programs/ya-registry/src/: lib.rs
programs/ya-registry/tests/: registry_tests.rs
programs/ya-test-adapter/: Cargo.toml
programs/ya-test-adapter/src/: lib.rs
scripts/: build.sh  deploy-devnet.sh  diag-tree.sh  dump-cpi-meta.mjs  fetch-idls.sh  fork-test.sh  gen-keys.sh  inspect-chainlink.mjs  inspect-chainlink.ts  inspect-idls.mjs  inspect-jlp.mjs  inspect-jlp.ts  inspect-kamino.mjs  inspect-kamino.ts  inspect-marginfi.mjs  inspect-marginfi.ts  keys-sync.sh  m0-finalize.sh  m1-check.sh  probe-drift-if.mjs  setup-registry-devnet.mjs  smoke-anchor.mjs  spike-diag.sh  spike-each.sh  spike.sh  surfnet-smoke.sh  surfpool-start.sh  test-rust.sh  verify-addresses.mjs  verify-addresses.ts  verify-devnet.mjs  verify-devnet.ts  verify-drift-if.mjs  verify-jup-perps.mjs  verify-jup-perps.ts  wsl-env.sh
skills/build-yield-adapter/: SKILL.md
tests/: mock.spec.ts
tests/adapters/: drift-if.spec.ts  jlp.spec.ts  kamino.spec.ts  maple.spec.ts  marginfi.spec.ts
tests/conformance/: runConformance.ts
tests/fork/: FIXTURES.md  RESULTS.md
tests/helpers/: cheatcodes.ts  ctx.ts
tests/sdk/: decode.spec.ts  e2e.spec.ts
ts/sdk/: README.md  client.ts  conformance.ts  constants.ts  decode.ts  index.ts  pdas.ts  registry.ts  returnData.ts
ts/sdk/adapters/: drift-if.ts  index.ts  jlp.ts  kamino.ts  maple.ts  marginfi.ts  types.ts
