[workspace]
members = [
    "crates/ya-interface",
    "programs/ya-registry",
    "programs/ya-dispatcher",
    "programs/ya-mock-adapter",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "1.0.2"
anchor-spl = "1.0.2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
