[package]
name = "ya-adapter-kamino"
version = "0.1.0"
edition = "2021"
description = "Kamino Lend (KLend) USDC reference adapter: deposit_reserve_liquidity / redeem_reserve_collateral via the uniform manual CPI; oracle-free collateral-exchange-rate value."

[lib]
crate-type = ["cdylib", "lib"]
name = "ya_adapter_kamino"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
ya-interface = { path = "../../crates/ya-interface" }
ya-registry = { path = "../ya-registry", features = ["cpi"] }

[lints.rust]
unexpected_cfgs = { level = "allow" }
