[package]
name = "ya-registry"
version = "0.1.0"
edition = "2021"
description = "Governance-gated registry of approved yield adapters (the dispatcher only routes to Active entries)."

[lib]
crate-type = ["cdylib", "lib"]
name = "ya_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true }

[dev-dependencies]
litesvm = "0.10.0"
solana-message = "3.0.1"
solana-transaction = "3.0.2"
solana-signer = "3.0.0"
solana-keypair = "3.0.1"

[lints.rust]
unexpected_cfgs = { level = "allow" }
