[package]
name = "ya-test-adapter"
version = "0.1.0"
edition = "2021"
description = "Throwaway crate: validates ya-interface macro expansion + helper ergonomics compile under a real #[program]."

[lib]
crate-type = ["cdylib", "lib"]
name = "ya_test_adapter"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
ya-interface = { path = "../ya-interface" }

[lints.rust]
unexpected_cfgs = { level = "allow" }
